--- a/src/components/moleculs/btn/btn.scss
+++ b/src/components/moleculs/btn/btn.scss
@@ -1,10 +1,60 @@
-.button {
-  &.button-primary {
-    @apply bg-blue-50 text-white;
-  }
-  
-  &.button-secondary {
-    @apply bg-white text-gray-800;
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  padding: 16px;
+  transition: all 0.2s ease-in-out;
+
+  &-text {
+    font-size: 24px;
+    line-height: 1.34;
   }
 
+  &-primary {
+    background-color: red;
+    color: white !important;
+    &:active {
+      background-color: #0747a6;
+    }
+  }
+
+  &-secondary {
+    background-color: white;
+    color: #108ee9 !important;
+    border: 1px solid #dfe1e6;
+    &:active {
+      background-color: #f4f5f7;
+    }
+  }
+
+  &-large {
+    min-width: 160px;
+    padding: 16px 24px;
+    .btn-text {
+      font-size: 24px;
+      line-height: 1.34;
+    }
+  }
+
+  &-small {
+    min-width: 100px;
+    padding: 10px 16px;
+    .btn-text {
+      font-size: 20px;
+      line-height: 1.3;
+    }
+  }
+
+  &-block {
+    width: 100%;
+  }
+
+  &-disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    &:active {
+      opacity: 0.5;
+    }
+  }
 }
