--- a/src/components/moleculs/btn/btn.scss
+++ b/src/components/moleculs/btn/btn.scss
@@ -12,7 +12,7 @@
   }
 
   &-primary {
-    background-color: red;
+    background-color: #108ee9;
     color: white !important;
     &:active {
       background-color: #0747a6;
