--- a/src/components/moleculs/btn/btn.scss
+++ b/src/components/moleculs/btn/btn.scss
@@ -5,7 +5,7 @@
   border-radius: 8px;
   padding: 16px;
   transition: all 0.2s ease-in-out;
-
+  color: white;
   &-text {
     font-size: 24px;
     line-height: 1.34;
@@ -13,7 +13,7 @@
 
   &-primary {
     background-color: #108ee9;
-    color: white !important;
+
     &:active {
       background-color: #0747a6;
     }
